@@ -18,6 +18,13 @@
 
     <browser:page
         for="*"
+        name="news_archive_listing"
+        class=".newslisting.NewsArchiveListing"
+        permission="zope.Public"
+        />
+
+    <browser:page
+        for="*"
         name="news_rss_listing"
         class=".newslisting.NewsListing"
         permission="zope.Public"
