@@ -32,16 +32,17 @@
 <metal:main fill-slot="content-core">
 <tal:define define="toLocalizedTime nocall:context/@@plone/toLocalizedTime">
 <form id="archiv_form" action="./news_listing" method="get"
+      tal:condition="python:view.__name__!='news_archive_listing'"
       tal:define="start python:toLocalizedTime(view.get_today(minus=30));
                   end python:toLocalizedTime(view.get_today());">
     <div class="dateFields">
         <label for="start"><span i18n:translate="label_from">From</span>:</label><br />
-        <input type="text" name="start" size="8" id="start" readonly="readonly"
+        <input type="text" name="start" size="8" id="start"
                tal:attributes="value request/start|start" />
     </div>
     <div class="dateFields">
         <label for="end"><span i18n:translate="label_to">To</span>:</label><br />
-        <input type="text" name="end" size="8" id="end" readonly="readonly"
+        <input type="text" name="end" size="8" id="end"
                tal:attributes="value request/end|end" />
     </div>
 </form>
