@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<object name="NewsFolder"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title" i18n:translate="">NewsFolder</property>
+ <property name="description" i18n:translate=""></property>
+ <property name="icon_expr">object/@@egov_icon/Folder</property>
+ <property name="content_meta_type">NewsFolder</property>
+ <property name="product">ATContentTypes</property>
+ <property name="factory">addATFolder</property>
+ <property name="add_view_expr"></property>
+ <property name="link_target"></property>
+ <property name="immediate_view">news_archive_listing</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types">
+  <element value="News"/>
+ </property>
+ <property name="allow_discussion">False</property>
+ <property name="default_view">news_archive_listing</property>
+ <property name="view_methods">
+  <element value="news_archive_listing"/>
+  <element value="news_listing"/>
+ </property>
+ <property name="default_view_fallback">False</property>
+ <alias from="(Default)" to="(dynamic view)"/>
+ <alias from="edit" to="atct_edit"/>
+ <alias from="sharing" to="@@sharing"/>
+ <alias from="view" to="(selected layout)"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    icon_expr="" link_target="" url_expr="string:${folder_url}/"
+    visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object"
+    condition_expr="not:object/@@plone_lock_info/is_locked_for_current_user|python:True"
+    icon_expr="" link_target="" url_expr="string:${object_url}/edit"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="Folder Listing" action_id="folderlisting" category="folder"
+    condition_expr="object/isPrincipiaFolderish" icon_expr="" link_target=""
+    url_expr="string:${folder_url}/view" visible="False">
+  <permission value="View"/>
+ </action>
+</object>
