@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+    <version>1.0</version>
+    <dependencies>
+        <dependency>profile-collective.portlet.collectionmultiview:default</dependency>
+    </dependencies>
+</metadata>
