@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="ContentPage"
+        meta_type="Factory-based Type Information with dynamic views"
+        i18n:domain="egov.contentpage" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+    <property name="allowed_content_types" purge="False">
+        <element value="News" remove="True" />
+    </property>
+</object>
