@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="News"
+   meta_type="Factory-based Type Information with dynamic views"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+   i18n:domain="simplelayout.types.news">
+ <property name="global_allow">False</property>
+</object>
