@@ -1,0 +1,24 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:gs="http://namespaces.zope.org/genericsetup"
+    i18n_domain="tamedia.policy">
+
+    <gs:registerProfile
+        name="newsfolder"
+        title="Upgrade profile for simplelayout.types.news (adds NewsFolder)"
+        description="This profile upgrades simplelayout.types.news to version 1.1."
+        directory="profiles/newsfolder"
+        for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <gs:upgradeStep
+        title="Upgrade profile for tamedia.policy"
+        description="Adds NewsFolder type."
+        source="1"
+        destination="2"
+        handler="simplelayout.types.news.upgrades.upgrade_newsfolder"
+        profile="simplelayout.types.news:default"
+        />
+
+</configure>
